# Web-Backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  main.py  pyproject.toml  test.py
app/: main.go
app/lib/: database.go  mcstatus.go
app/models/: contact.go  help.go  leaderboard.go  status.go
app/routes/: contact.go  help.go  leaderboard.go  status.go
cmd/backend/: backend.go
cmd/backend/lib/: mcstatus.go
lib/: database.go  encrypt.go  mapping.go
models/: account.go  common.go  constants.go  contact.go  items.go
routes/: account.go  contact.go  help.go  items.go
